--- a/public/block/index.html
+++ b/public/block/index.html
@@ -498,12 +498,9 @@ class Block{
 		if(!this.can_move(x,y,pd,y_min)){
 			if(y > -3){
 				this.y -= 1
-				this.frame()
+				return this.frame()
 			}
-			else{
-				this.grav && this.gravitate(void 0, false, true)
-			}
-			return
+			return this.grav && this.gravitate(void 0, false, true)
 		}
 		this.dp(piece,rot,x,y)
 		let y_ghost = y
