Block Retro: All Colors Found!

--- a/public/block/retro.html
+++ b/public/block/retro.html
@@ -258,70 +258,6 @@ const themes = {
 	189:[0x01,0x01,0x02],
 	190:[0x03,0x04,0x04],
 	191:[0x05,0x05,0x05],
-	192:[0o0,0o0,0o0],
-	193:[0o0,0o0,0o0],
-	194:[0o0,0o0,0o0],
-	195:[0o0,0o0,0o0],
-	196:[0o0,0o0,0o0],
-	197:[0o0,0o0,0o0],
-	198:[0o0,0o0,0o0],
-	199:[0o0,0o0,0o0],
-	200:[0o0,0o0,0o0],
-	201:[0o0,0o0,0o0],
-	202:[0o0,0o0,0o0],
-	203:[0o0,0o0,0o0],
-	204:[0o0,0o0,0o0],
-	205:[0o0,0o0,0o0],
-	206:[0o0,0o0,0o0],
-	207:[0o0,0o0,0o0],
-	208:[0o0,0o0,0o0],
-	209:[0o0,0o0,0o0],
-	210:[0o0,0o0,0o0],
-	211:[0o0,0o0,0o0],
-	212:[0o0,0o0,0x0F],
-	213:[0o0,0o0,0o0],
-	214:[0o0,0o0,0o0],
-	215:[0o0,0o0,0o0],
-	216:[0o0,0o0,0o0],
-	217:[0o0,0o0,0o0],
-	218:[0o0,0o0,0o0],
-	219:[0o0,0o0,0o0],
-	220:[0o0,0o0,0o0],
-	221:[0o0,0o0,0o0],
-	222:[0o0,0o0,0o0],
-	223:[0o0,0o0,0x0F],
-	224:[0o0,0o0,0o0],
-	225:[0o0,0o0,0o0],
-	226:[0x0F,0o0,0o0],
-	227:[0o0,0o0,0o0],
-	228:[0x0F,0o0,0o0],
-	229:[0o0,0o0,0o0],
-	230:[0x0F,0o0,0o0],
-	231:[0x0F,0o0,0o0],
-	232:[0o0,0o0,0o0],
-	233:[0o0,0o0,0o0],
-	234:[0o0,0o0,0x0F],
-	235:[0x0A,0x0A,0x0A],
-	236:[0o0,0o0,0o0],
-	237:[0o0,0o0,0o0],
-	238:[0o0,0o0,0o0],
-	239:[0o0,0o0,0o0],
-	240:[0o0,0o0,0o0],
-	241:[0o0,0o0,0o0],
-	242:[0o0,0x0F,0o0],
-	243:[0o0,0o0,0o0],
-	244:[0o0,0o0,0o0],
-	245:[0o0,0o0,0o0],
-	246:[0o0,0o0,0o0],
-	247:[0o0,0o0,0o0],
-	248:[0o0,0o0,0o0],
-	249:[0o0,0o0,0o0],
-	250:[0x3D,0x0F,0x19],
-	251:[0x19,0x20,0x00],
-	252:[0x00,0x00,0x01],
-	253:[0x01,0x01,0x02],
-	254:[0x03,0x04,0x04],
-	255:[0x05,0x05,0x05],
 }
 class Block{
 	static level = 4
@@ -804,7 +740,9 @@ class Block{
 	set_theme(i){
 		i ??= floor(this.lines / Block.level) % 256
 		eid('theme').value = i
-		if(i < 138){ i %= 10 }
+		if(i <= 137){ i %= 10 }
+		else if(i <= 201){ i -= 192 }
+		else{ i -= 64 }
 		this.theme = themes[i]
 	}
 	store_get(k){
