Retro color palette
https://www.nesdev.org/wiki/PPU_palettes

--- a/public/block/retro.html
+++ b/public/block/retro.html
@@ -152,46 +152,47 @@ const appid = 'dsblockretro'
 const N = 4
 const NN = N * N
 const palette = {
-	[0x00]:'#7c7c7c',
-	[0x01]:'#0000fc',
-	[0x02]:'#0000bc',
-	[0x03]:'#4428bc',
-	[0x04]:'#940084',
-	[0x05]:'#a80020',
-	[0x06]:'#a81000',
-	[0x07]:'#881400',
-	[0x08]:'#503000',
-	[0x09]:'#007800',
-	[0x0A]:'#006800',
-	[0x0C]:'#004058',
+	[0x00]:'#626262',
+	[0x01]:'#001C95',
+	[0x02]:'#1904AC',
+	[0x03]:'#42009D',
+	[0x04]:'#61006B',
+	[0x05]:'#6E0025',
+	[0x06]:'#650500',
+	[0x07]:'#491E00',
+	[0x08]:'#223700',
+	[0x09]:'#004900',
+	[0x0A]:'#004F00',
+	[0x0C]:'#00355E',
 	[0x0F]:'#000000',
-	[0x10]:'#bbbbbb',
-	[0x12]:'#0058f8',
-	[0x13]:'#6844fc',
-	[0x14]:'#d800cc',
-	[0x15]:'#e40058',
-	[0x16]:'#f83800',
-	[0x17]:'#e45c10',
-	[0x18]:'#ac7c00',
-	[0x19]:'#00b800',
-	[0x1A]:'#00a800',
-	[0x1C]:'#008888',
-	[0x20]:'#f7f7f7',
-	[0x21]:'#3cbcfc',
-	[0x22]:'#6888fc',
-	[0x24]:'#f878f8',
-	[0x25]:'#f85898',
-	[0x26]:'#f87858',
-	[0x27]:'#fca044',
-	[0x29]:'#b8f818',
-	[0x2A]:'#58d854',
-	[0x2B]:'#58f898',
-	[0x2D]:'#787878',
-	[0x30]:'#fbfbfb',
-	[0x36]:'#f0d0b0',
-	[0x37]:'#fce0a8',
-	[0x38]:'f8d878',
-	[0x3D]:'#f8d8f8',
+	[0x10]:'#ABABAB',
+	[0x12]:'#3D2EFF',
+	[0x13]:'#7115F3',
+	[0x14]:'#9B0BB9',
+	[0x15]:'#B01262',
+	[0x16]:'#A92704',
+	[0x17]:'#894600',
+	[0x18]:'#576600',
+	[0x19]:'#237F00',
+	[0x1A]:'#008900',
+	[0x1C]:'#006D90',
+	[0x20]:'#FFFFFF',
+	[0x21]:'#57A5FF',
+	[0x22]:'#8287FF',
+	[0x24]:'#DF60FF',
+	[0x25]:'#F863C6',
+	[0x26]:'#F8746D',
+	[0x27]:'#DE9020',
+	[0x29]:'#81C800',
+	[0x2A]:'#56D522',
+	[0x2B]:'#3DD36F',
+	[0x2D]:'#4E4E4E',
+	[0x30]:'#FFFFFF',
+	[0x36]:'#FDCACE',
+	[0x37]:'#F5D4AF',
+	[0x38]:'#E6DF9C',
+	[0x3C]:'#B6EAE5',
+	[0x3D]:'#B8B8B8',
 }
 const themes = {
 	0:[0x30,0x21,0x12],
