--- a/public/block/retro.html
+++ b/public/block/retro.html
@@ -5,7 +5,7 @@
 <style>
 * {box-sizing:border-box;}
 :root {
-	--bg:#787878;
+	--pad: 0px;
 	--size:6vh;
 	accent-color:#404040;
 	color-scheme:dark;
@@ -17,7 +17,7 @@ body, button, input {
 	line-height:1.5;
 }
 body {
-	background:var(--bg);
+	background:var(--pi_00);
 	border-left: transparent 2px solid;
 	display:flex;
 	flex-direction:column;
@@ -25,7 +25,7 @@ body {
 	margin:0;
 	overflow:hidden;
 }
-body:focus {border-color:#bcbcbc;}
+body:focus {border-color:var(--pi_10);}
 button, label, input {
 	cursor:pointer;
 	user-select:none;
@@ -39,18 +39,19 @@ button, .button {
 hr {border-width:0 1px 0 0;}
 input {background:0;border:0;border-radius:0;padding:0;}
 input:focus{outline:1px solid;}
-.bg2 {background:#000;}
+.bg2 {background:var(--pi_0F);}
 .button {border-style:outset;}
 .column {display:flex;flex-direction:column;}
 .ctrl {
 	align-self: flex-end;
-	fill:#FFF;
+	fill:var(--pi_3C);
 	height:var(--size);
 	padding:0;
 	user-select:none;
 	width:var(--size);
 }
 .fade {opacity:.5;}
+.fade2 {opacity:.375;}
 .grow {flex-grow:1;}
 .hotkey {text-decoration:underline dotted;}
 .row {display:flex;}
@@ -58,7 +59,7 @@ input:focus{outline:1px solid;}
 	padding:2px 2px 2px 0;
 	text-align: right;
 }
-.uni-btn {line-height:0;}
+.uni-btn {color:var(--pi_3C);line-height:0;}
 .wide {width:100%;}
 input[type=checkbox]{margin:0 0 0 2px;}
 input[type=number]{direction:rtl;}
@@ -66,28 +67,33 @@ input[type=number]{direction:rtl;}
 </style>
 <body autofocus tabindex='0'>
 <main class='row'>
-<svg class='grow' viewBox='0 0 10 23'>
-	<rect id='wall' fill='transparent' width='10' height='23'></rect>
+<svg class='grow' viewBox='0 0 88 184'>
+	<rect id='wall' x='4' width='80' height='184' fill='transparent'></rect>
+	<g transform='translate(0,24)'>
+		<rect x=' 3' width='82' height='160' style='fill:var(--pi_0F)'></rect>
+		<path style='fill:var(--pi_3C)' d='m 0,-2 l 1,0 0,1 1,0 0,1 1,0 0,160 -3,0 z'/>
+		<path style='fill:var(--pi_3C)' d='m 88,-2 l -1,0 0,1 -1,0 0,1 -1,0 0,160 3,0 z'/>
+	</g>
 </svg>
 <div class='column bg2' style='min-width:7ch;width:var(--size);'>
 <div id='status' class='text-btn'></div>
-<div class='fade grow column'>
+<div class='grow column'>
 <label class='button text-btn'>
 	Level<br>
 	<input id='theme' class='wide' min='0' step='1' onChange='game.set_level(this.value)' type='number' autocomplete='off'>
 </label>
-<label class='button text-btn'>
+<label class='fade button text-btn'>
 	<span class='hotkey'>G</span>rav<input id='grav' onChange='document.body.focus();game.gravitate(void 0, this.checked, true)' type='checkbox' autocomplete='off'>
 </label>
-<label class='button text-btn row'>
+<label class='fade button text-btn row'>
 	<input id='bpf' class='grow' min='0' max='20' step='1' onChange='game.gravitate(void 0, void 0, true, parseInt(this.value))' type='number' autocomplete='off'
 	>G
 </label>
-<label class='button text-btn'>
+<label class='fade button text-btn'>
 	Delay<br>
 	<input id='delay' class='wide' min='0' step='.1' onChange='game.gravitate(1000 * parseFloat(this.value), void 0, true)' type='number' autocomplete='off'>
 </label>
-<button title='Reset' onClick='document.body.focus();game.reset()' class='ctrl'>
+<button title='Reset' class='fade ctrl' style='fill:var(--pi_10);' onClick='document.body.focus();game.reset()'>
 	<svg viewBox="0 0 128 128">
 		<path d="M108.46,63.96v-25.7c0-1.8-1.7-2.9-3-2l-35,24.4v-22.4c0.13-1.13-0.69-2.15-1.82-2.28
 		c-0.45-0.05-0.9,0.05-1.28,0.28l-36.9,25.1v-23.5c0-1.05-0.85-1.9-1.9-1.9h0h-10.2c-1.05,0-1.9,0.85-1.9,1.9l0,0v52.3
@@ -95,11 +101,11 @@ input[type=number]{direction:rtl;}
 		c0.23-0.39,0.33-0.84,0.28-1.28v-22.3l35,24.4c1.4,0.9,3-0.2,3-2L108.46,63.96z"/>
 	</svg>
 </button>
-<button title='Controls' class='ctrl' onClick="document.querySelectorAll('.touch').forEach(el=>el.hidden=!el.hidden);let t=eid('touch');t.checked=!t.checked;t.checked||document.body.focus();">
+<button title='Controls' class='fade ctrl' onClick="document.querySelectorAll('.touch').forEach(el=>el.hidden=!el.hidden);let t=eid('touch');t.checked=!t.checked;t.checked||document.body.focus();">
 	&vellip;
 	<input id='touch' checked hidden type='checkbox'>
 </button>
-<hr class='fade grow'>
+<hr class='fade2 grow'>
 <button onPointerDown="game.input('left')" class='ctrl touch' aria-label='Left'>
 	<svg viewBox="0 0 128 128">
 		<path d="M83.72,62.21v-25.7c0.03-1.25-0.96-2.28-2.21-2.31c-0.42-0.01-0.83,0.1-1.19,0.31l-43.5,25.7c-1.13,0.72-1.47,2.22-0.75,3.35c0.19,0.3,0.45,0.55,0.75,0.75l43.5,25.6c1.08,0.63,2.46,0.27,3.09-0.81c0.21-0.36,0.32-0.77,0.31-1.19V62.21z"/>
@@ -256,6 +262,10 @@ const themes = {
 	189:[0x01,0x01,0x02],
 	190:[0x03,0x04,0x04],
 	191:[0x05,0x05,0x05],
+}
+for(const pi in palette){
+	const k = `--pi_${parseInt(pi).toString(16).toUpperCase().padStart(2,'0')}`
+	document.documentElement.style.setProperty(k, palette[pi])
 }
 class Block{
 	static level = 4
@@ -490,7 +500,7 @@ class Block{
 		y += ghs
 		c.save()
 		c.globalAlpha = opacity
-		c.fillStyle = '#000'
+		c.fillStyle = palette[0x0F]
 		c.fillRect(g*x*z, g*y*z, g*z, g*z)
 		if(!ti){
 			c.fillStyle = palette[pi_2]
@@ -584,7 +594,7 @@ class Block{
 		const bag_length = bag.length
 		c.clearRect(0, 0, w, h)
 		c.fillStyle = palette[0x0F]
-		c.fillRect(0, ghs*g, w, gh*g)
+		// c.fillRect(0, ghs*g, w, gh*g)
 		for(let i=gs-1; i>=0; --i){
 			field[i] && this.dc(i % gw, floor(i / gw), Block.ppci[field[i]])
 		}
@@ -701,13 +711,12 @@ class Block{
 		const x = floor(rect.x)
 		const y = floor(rect.y)
 		const scale = window.devicePixelRatio
-		canvas.style.height = `${h}px`
 		canvas.height = h * scale
 		canvas.width = w * scale
 		canvas.style.height = `${h}px`
-		canvas.style.width = `${w}px`
 		canvas.style.left = `${x}px`
 		canvas.style.top = `${y}px`
+		canvas.style.width = `${w}px`
 		c.scale(scale, scale)
 		this.field && this.frame()
 	}
