--- a/public/block/retro.html
+++ b/public/block/retro.html
@@ -36,30 +36,33 @@ button, .button {
 	border-color:rgba(127,127,127,.5);
 	border-width:1px;
 }
-hr {border-width:0 1px 0 0;}
+hr {border-color:var(--pi_3C); border-width:0 1px 0 0;}
 input {background:0;border:0;border-radius:0;padding:0;}
 input:focus{outline:1px solid;}
 .bg2 {background:var(--pi_0F);}
 .button {border-style:outset;}
 .column {display:flex;flex-direction:column;}
+.ctrl, .ctrl svg {height:var(--size);}
 .ctrl {
 	align-self: flex-end;
 	fill:var(--pi_3C);
-	height:var(--size);
 	padding:0;
 	user-select:none;
-	width:var(--size);
+	width:100%;
 }
 .fade {opacity:.5;}
-.fade2 {opacity:.375;}
 .grow {flex-grow:1;}
 .hotkey {text-decoration:underline dotted;}
+.hi {
+	color:var(--pi_3C);
+	fill:var(--pi_3C);
+}
 .row {display:flex;}
 .text-btn {
 	padding:2px 2px 2px 0;
 	text-align: right;
 }
-.uni-btn {color:var(--pi_3C);line-height:0;}
+.uni-btn {line-height:0;}
 .wide {width:100%;}
 input[type=checkbox]{margin:0 0 0 2px;}
 input[type=number]{direction:rtl;}
@@ -70,7 +73,7 @@ input[type=number]{direction:rtl;}
 <svg class='grow' viewBox='0 0 88 184'>
 	<rect id='wall' x='4' width='80' height='184' fill='transparent'></rect>
 	<g transform='translate(0,24)'>
-		<rect x=' 3' width='82' height='160' style='fill:var(--pi_0F)'></rect>
+		<rect x='3' width='82' height='160' style='fill:var(--pi_0F)'></rect>
 		<path style='fill:var(--pi_3C)' d='m 0,-2 l 1,0 0,1 1,0 0,1 1,0 0,160 -3,0 z'/>
 		<path style='fill:var(--pi_3C)' d='m 88,-2 l -1,0 0,1 -1,0 0,1 -1,0 0,160 3,0 z'/>
 	</g>
@@ -82,6 +85,9 @@ input[type=number]{direction:rtl;}
 	Level<br>
 	<input id='theme' class='wide' min='0' step='1' onChange='game.set_level(this.value)' type='number' autocomplete='off'>
 </label>
+<button class='fade ctrl' onPointerDown="game.input('level_increment')">
+	Next
+</button>
 <label class='fade button text-btn'>
 	<span class='hotkey'>G</span>rav<input id='grav' onChange='document.body.focus();game.gravitate(void 0, this.checked, true)' type='checkbox' autocomplete='off'>
 </label>
@@ -105,7 +111,7 @@ input[type=number]{direction:rtl;}
 	&vellip;
 	<input id='touch' checked hidden type='checkbox'>
 </button>
-<hr class='fade2 grow'>
+<hr class='grow'>
 <button onPointerDown="game.input('left')" class='ctrl touch' aria-label='Left'>
 	<svg viewBox="0 0 128 128">
 		<path d="M83.72,62.21v-25.7c0.03-1.25-0.96-2.28-2.21-2.31c-0.42-0.01-0.83,0.1-1.19,0.31l-43.5,25.7c-1.13,0.72-1.47,2.22-0.75,3.35c0.19,0.3,0.45,0.55,0.75,0.75l43.5,25.6c1.08,0.63,2.46,0.27,3.09-0.81c0.21-0.36,0.32-0.77,0.31-1.19V62.21z"/>
@@ -117,10 +123,10 @@ input[type=number]{direction:rtl;}
 	</svg>
 </button>
 <button onPointerDown="game.input('reverse')" class='ctrl touch' aria-label='Reverse'>
-	<div class='uni-btn' style='font-size:var(--size);'>&#x21b6;</div>
+	<div class='hi uni-btn' style='font-size:var(--size);'>&#x21b6;</div>
 </button>
 <button onPointerDown="game.input('rotate')" class='ctrl touch' aria-label='Rotate'>
-	<div class='uni-btn' style='font-size:var(--size);'>&#x21b7;</div>
+	<div class='hi uni-btn' style='font-size:var(--size);'>&#x21b7;</div>
 </button>
 <button onPointerDown="game.input('hold')" class='ctrl touch' aria-label='Hold'>
 	<svg viewBox="-16 -16 160 160">
@@ -297,6 +303,7 @@ class Block{
 		'J30':[[0,0],[-1,0],[-1, 1],[ 0,-2],[-1,-2]],
 		'J32':[[0,0],[-1,0],[-1, 1],[ 0,-2],[-1,-2]],
 	}
+	static pr = {I:0,J:2,L:2,O:0,S:0,T:2,Z:0}
 	static pb = {
 		I: [0b00011110000, 0b100010001000100, 0b111100000000, 0b10001000100010],
 		J: [0b00001110001, 0b000001000100110, 0b010001110000, 0b00001100100010],
@@ -306,7 +313,7 @@ class Block{
 		T: [0b00001110010, 0b000001001100010, 0b001001110000, 0b00001000110010],
 		Z: [0b00001100011, 0b000001001100100, 0b011000110000, 0b00000100110010],
 	}
-	static padb = {I:2,J:1,L:1,O:2,S:1,T:1,Z:1}
+	static padb = {I:2,J:2,L:2,O:2,S:1,T:2,Z:1}
 	static padl = {I:0,J:0,L:0,O:1,S:0,T:0,Z:0}
 	static padr = {I:0,J:1,L:1,O:1,S:1,T:1,Z:1}
 	static padt = {I:1,J:1,L:1,O:1,S:0,T:1,Z:0}
@@ -338,6 +345,7 @@ class Block{
 		'F2': 'reset',
 		'Home': 'hold',
 		'KeyA': 'left',
+		'KeyB': 'level_decrement',
 		'KeyC': 'rotate',
 		'KeyD': 'right',
 		'KeyE': 'rotate',
@@ -349,6 +357,7 @@ class Block{
 		'KeyK': 'rotate',
 		'KeyL': 'drop',
 		'KeyM': 'drop',
+		'KeyN': 'level_increment',
 		'KeyO': 'right',
 		'KeyP': 'pause',
 		'KeyQ': 'reverse',
@@ -472,6 +481,12 @@ class Block{
 			case 'delay_increment':
 				delay = this.delay + 100
 			break
+			case 'level_decrement':
+				this.set_theme(this.level - 1)
+			break
+			case 'level_increment':
+				this.set_theme(this.level + 1)
+			break
 		}
 		this.gravitate(delay, grav, true, bpf)
 	}
@@ -589,7 +604,7 @@ class Block{
 	}
 	frame(){
 		const pz = Block.prev_z
-		const {c,field,g,gh,ghost_alpha,ghs,gs,gw,h,hold,preview,w} = this
+		const {c,field,g,g8,gh,ghost_alpha,ghs,gs,gw,h,hold,preview,w} = this
 		let {bag,piece,rot,x,y} = this
 		const bag_length = bag.length
 		c.clearRect(0, 0, w, h)
@@ -603,7 +618,7 @@ class Block{
 		}
 		if(!piece){
 			piece = this.piece = bag.pop()
-			rot = this.rot = 'JLT'.includes(piece) ? 2 : 0
+			rot = this.rot = Block.pr[piece]
 			x = this.x = 3
 			y = this.y = Block.y_init - Block.padt[piece]
 		}
@@ -624,18 +639,18 @@ class Block{
 		if(y !== y_ghost){
 			this.dp(piece,rot,x,y_ghost,ghost_alpha)
 		}
-		c.fillRect(0, 0, (N+2)*g*pz, N*g*pz)
-		x = round(gw / pz)
-		y = Block.y_init - 1
-		hold && this.dp(hold,0,1,y-Block.padb[hold],1,pz)
-		c.fillRect(x*g*pz, 0, -((N+1)*preview+1)*g*pz, N*g*pz)
-		x -= 1
+		c.strokeStyle = palette[0x3C]
+		c.beginPath();c.rect(g8, g8, 10*g8, N*g*pz);c.stroke();c.fill()
+		y = Block.y_init - .5
+		hold && this.dp(hold,Block.pr[hold],1,y-Block.padb[hold],1,pz)
+		c.beginPath();c.rect(gw*g-g8, g8, -10*g8, N*g*pz);c.stroke();c.fill()
+		x = round(gw / pz) - 1
 		bag.slice(-preview).forEach((piece, i) => {
 			const padb = Block.padb[piece]
 			const padl = Block.padl[piece]
 			const padr = Block.padr[piece]
 			x += Block.padr[piece] - N
-			this.dp(piece,0,x,y-padb,void 0,pz)
+			this.dp(piece,Block.pr[piece],x,y-padb,void 0,pz)
 			x += padl - 1
 		})
 		x = round(gw / pz - N)
@@ -717,6 +732,7 @@ class Block{
 		canvas.style.left = `${x}px`
 		canvas.style.top = `${y}px`
 		canvas.style.width = `${w}px`
+		c.lineWidth = g8
 		c.scale(scale, scale)
 		this.field && this.frame()
 	}
@@ -743,7 +759,7 @@ class Block{
 	}
 	set_theme(i){
 		i ??= this.level
-		i %= 256
+		i = (i + 256) % 256
 		eid('theme').value = this.level = i
 		if(i <= 137){ i %= 10 }
 		if((i >= 192) && (i <= 201)){ i -= 192 }
