Block: (#1) mobile Chrome button highlight delay

--- a/public/block/index.html
+++ b/public/block/index.html
@@ -28,6 +28,7 @@ body {
 body:focus {border-color:rgb(60,0,60);}
 button, label, input {
 	cursor:pointer;
+	touch-action:manipulation;
 	user-select:none;
 }
 input[type=checkbox]{height:1em;width:1em;}
